--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
     <section class="cards">
   
-      <div class="card main-card">
+      <div class="card main-card daniel">
         <div class="author">
           <img src="./images/image-daniel.jpg" alt="daniel-jpg">
           <p class="name">Daniel Clifford</p>
@@ -37,7 +37,7 @@
           the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
       </div>
   
-      <div class="card sub-card">
+      <div class="card sub-card jonathan">
         <div class="author">
           <img src="./images/image-jonathan.jpg" alt="jon-jpg">
           <p class="name">Jonathan Walters</p>
@@ -50,7 +50,7 @@
           for a big company. This was one of the best investments I’ve made in myself. ”</p>
       </div>
   
-      <div class="card sub-card">
+      <div class="card sub-card jeanette">
         <div class="author">
           <img src="./images/image-jeanette.jpg" alt="jeanette-jpg">
           <p class="name">Jeanette Harmon</p>
@@ -64,7 +64,7 @@
           while doing something I love. ”</p>
       </div>
   
-      <div class="card main-card">
+      <div class="card main-card patrick">
         <div class="author">
           <img src="./images/image-patrick.jpg" alt="patrick-jpg">
           <p class="name">Patrick Abrams</p>
@@ -82,7 +82,7 @@
           an incredible community of smart and amazing people. ”</p>
       </div>
   
-      <div class="card long-card">
+      <div class="card long-card kira">
         <div class="author">
           <img src="./images/image-kira.jpg" alt="kira-jpg">
           <p class="name">Kira Whittle</p>
