--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       <div class="card main-card daniel">
         <div class="author">
           <img src="./images/image-daniel.jpg" alt="daniel-jpg">
-          <p class="name">Daniel Clifford</p>
-          <p class="verified">Verified Graduate</p>
+          <div class="author-details">
+            <p class="name">Daniel Clifford</p>
+            <p class="verified">Verified Graduate</p>
+          </div>
         </div>
   
         <h3 class="main-msg">I received a job offer mid-course, and the subjects I learned were current, if not more so,
@@ -40,8 +42,10 @@
       <div class="card sub-card jonathan">
         <div class="author">
           <img src="./images/image-jonathan.jpg" alt="jon-jpg">
-          <p class="name">Jonathan Walters</p>
-          <p class="verified">Verified Graduate</p>
+          <div class="author-details">
+            <p class="name">Jonathan Walters</p>
+            <p class="verified">Verified Graduate</p>
+          </div>
         </div>
   
         <h3 class="main-msg">The team was very supportive and kept me motivated</h3>
@@ -53,8 +57,10 @@
       <div class="card sub-card jeanette">
         <div class="author">
           <img src="./images/image-jeanette.jpg" alt="jeanette-jpg">
-          <p class="name">Jeanette Harmon</p>
-          <p class="verfied">Verified Graduate</p>
+          <div class="author-details">
+            <p class="name">Jeanette Harmon</p>
+            <p class="verfied">Verified Graduate</p>
+          </div>
         </div>
   
         <h3 class="main-msg">An overall wonderful and rewarding experience</h3>
@@ -67,8 +73,10 @@
       <div class="card main-card patrick">
         <div class="author">
           <img src="./images/image-patrick.jpg" alt="patrick-jpg">
-          <p class="name">Patrick Abrams</p>
-          <p class="verfied">Verified Graduate</p>
+          <div class="author-details">
+            <p class="name">Patrick Abrams</p>
+            <p class="verfied">Verified Graduate</p>
+          </div>
         </div>
   
         <h3 class="main-msg">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them
@@ -85,8 +93,10 @@
       <div class="card long-card kira">
         <div class="author">
           <img src="./images/image-kira.jpg" alt="kira-jpg">
-          <p class="name">Kira Whittle</p>
-          <p class="verified">Verified Graduate</p>
+          <div class="author-details">
+            <p class="name">Kira Whittle</p>
+            <p class="verified">Verified Graduate</p>
+          </div>
         </div>
   
         <h3 class="main-msg">Such a life-changing experience. Highly recommended!</h3>
