--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <img src="./images/image-jeanette.jpg" alt="jeanette-jpg">
           <div class="author-details">
             <p class="name">Jeanette Harmon</p>
-            <p class="verfied">Verified Graduate</p>
+            <p class="verified">Verified Graduate</p>
           </div>
         </div>
   
@@ -75,7 +75,7 @@
           <img src="./images/image-patrick.jpg" alt="patrick-jpg">
           <div class="author-details">
             <p class="name">Patrick Abrams</p>
-            <p class="verfied">Verified Graduate</p>
+            <p class="verified">Verified Graduate</p>
           </div>
         </div>
   
