updates to typography

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           </div>
         </div>
   
-        <h3 class="main-msg">An overall wonderful and rewarding experience</h3>
+        <h3 class="main-msg dark-title">An overall wonderful and rewarding experience</h3>
   
-        <p class="card-p">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good
+        <p class="card-p dark-p">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good
           living
           while doing something I love. ”</p>
       </div>
@@ -99,9 +99,9 @@
           </div>
         </div>
   
-        <h3 class="main-msg">Such a life-changing experience. Highly recommended!</h3>
+        <h3 class="main-msg dark-title">Such a life-changing experience. Highly recommended!</h3>
   
-        <p class="card-p">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
+        <p class="card-p dark-p">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
           professionals who can help me learn programming step by step. I was encouraged to enroll by a former
           student of theirs who can only say wonderful things about the program. The entire curriculum and staff
           did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team
